2008-03-06  Daniel Jacobowitz  <dan@codesourcery.com>

	* gcc.c-torture/execute/20080222-1.c: New test.

2008-03-03  Uros Bizjak  <ubizjak@gmail.com>

	* gcc.dg/vect/vect-99.c: Include stdlib.h and tree-vect.h.
	(main): Call check_vect and foo.  Check array values after
	the call to foo.

2008-02-25  Uros Bizjak  <ubizjak@gmail.com>

	* gcc.target/i386/sse-18.c: Pass if CPU has no SSE2 support.

2008-02-20  Richard Guenther  <rguenther@suse.de>

	PR middle-end/35265
	* gcc.dg/builtins-66.c: New testcase.

2008-02-15  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* g++.dg/tree-ssa/ivopts-1.C: Remove x86 XFAILs.

2008-02-12  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* obj-c++.dg/bitfield-1.mm: Expect failures.
	* obj-c++.dg/bitfield-4.mm: Likewise.
	* obj-c++.dg/cxx-ivars-2.mm: Likewise.
	* obj-c++.dg/encode-8.mm: Likewise.
	* obj-c++.dg/isa-field-1.mm: Likewise.
	* obj-c++.dg/layout-1.mm: Likewise.
	* obj-c++.dg/lookup-2.mm: Likewise.
	* obj-c++.dg/try-catch-2.mm: Likewise.
	* obj-c++.dg/try-catch-9.mm: Likewise.

2008-02-12  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	PR objc++/34193
	* obj-c++.dg/gnu-runtime-2.mm: Fix signature of function main().

2008-02-12  Jason Merrill  <jason@redhat.com>

	* g++.dg/init/ctor8.C: Remove.

2008-02-06  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* g++.dg/tree-ssa/ivopts-1.C: Remove xfails for hppa*-*-*.

2008-02-05  Richard Guenther  <rguenther@suse.de>

	Backport from mainline:
	2008-01-17  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/34825
	* gcc.dg/pr34825.c: New testcase.

2008-02-05  Richard Guenther  <rguenther@suse.de>

	Backport from mainline:
	2008-01-16  Richard Guenther  <rguenther@suse.de>

	PR c/34768
	* gcc.c-torture/execute/pr34768-1.c: New testcase.
	* gcc.c-torture/execute/pr34768-2.c: Likewise.

2008-02-04  Daniel Franke  <franke.daniel@gmail.com>

	* gfortran.dg/where_operator_assign_4.f90: Fix typo in error message
	to match.

2008-02-04  Richard Guenther  <rguenther@suse.de>
